<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="BunsanMembers" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tY1-xq-hon">
                                <rect key="frame" x="139" y="205" width="220" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="usernametextfield"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kcs-Pw-xwd">
                                <rect key="frame" x="139" y="288" width="220" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordtextfield"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qiu-91-p9q">
                                <rect key="frame" x="32" y="210" width="81" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="67W-v5-tyX">
                                <rect key="frame" x="168.5" y="377" width="38" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginbutton"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="loginButtonWasTouchedUpInsideSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9nT-wr-s5F"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uUZ-gi-Nw1">
                                <rect key="frame" x="32" y="291" width="79" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="uUZ-gi-Nw1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="1bx-Q8-vw7"/>
                            <constraint firstItem="kcs-Pw-xwd" firstAttribute="top" secondItem="tY1-xq-hon" secondAttribute="bottom" constant="53" id="4MH-rH-zlH"/>
                            <constraint firstItem="kcs-Pw-xwd" firstAttribute="leading" secondItem="uUZ-gi-Nw1" secondAttribute="trailing" constant="28" id="64h-c0-CeE"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kcs-Pw-xwd" secondAttribute="trailing" constant="16" id="Itc-89-CKA"/>
                            <constraint firstItem="qiu-91-p9q" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="190" id="Lz9-dd-Aly"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="67W-v5-tyX" secondAttribute="bottom" constant="260" id="R8O-52-C3F"/>
                            <constraint firstItem="tY1-xq-hon" firstAttribute="leading" secondItem="qiu-91-p9q" secondAttribute="trailing" constant="26" id="Rkd-j1-Gq8"/>
                            <constraint firstItem="tY1-xq-hon" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="185" id="VWW-wh-aMw"/>
                            <constraint firstItem="uUZ-gi-Nw1" firstAttribute="top" secondItem="qiu-91-p9q" secondAttribute="bottom" constant="60" id="oqy-Uo-G72"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tY1-xq-hon" secondAttribute="trailing" constant="16" id="v8i-nn-3gX"/>
                            <constraint firstItem="qiu-91-p9q" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="wKX-k4-ted"/>
                            <constraint firstItem="67W-v5-tyX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yVq-8T-T4b"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="nameTextField" destination="tY1-xq-hon" id="rsu-vU-3zh"/>
                        <outlet property="passwordTextField" destination="kcs-Pw-xwd" id="JTd-74-umJ"/>
                        <segue destination="hX9-Sd-Kcm" kind="show" identifier="showMembersList" id="aR1-l7-EeF"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
        </scene>
        <!--Member List View Controller-->
        <scene sceneID="wGm-PX-Sud">
            <objects>
                <viewController id="hX9-Sd-Kcm" customClass="MemberListViewController" customModule="BunsanMembers" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Cej-Mu-gis">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Fgj-hH-Axz">
                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="InformationCell" id="6qe-xg-jpF">
                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6qe-xg-jpF" id="oAW-J6-Bct">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="hX9-Sd-Kcm" id="Er2-cK-nRL"/>
                                    <outlet property="delegate" destination="hX9-Sd-Kcm" id="Pr2-b7-O8a"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="MemberListView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="Fgj-hH-Axz" firstAttribute="bottom" secondItem="BUh-PQ-rcB" secondAttribute="bottom" id="9XK-0Q-ZLX"/>
                            <constraint firstItem="Fgj-hH-Axz" firstAttribute="top" secondItem="BUh-PQ-rcB" secondAttribute="top" id="9yd-Pp-wSY"/>
                            <constraint firstItem="Fgj-hH-Axz" firstAttribute="trailing" secondItem="BUh-PQ-rcB" secondAttribute="trailing" id="NC5-K5-phb"/>
                            <constraint firstItem="Fgj-hH-Axz" firstAttribute="leading" secondItem="BUh-PQ-rcB" secondAttribute="leading" id="OBq-pE-LcM"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="BUh-PQ-rcB"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="lZl-4s-gXf" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1037.5999999999999" y="133.5832083958021"/>
        </scene>
    </scenes>
</document>
